Fix overflow for smaller screens.

--- a/src/components/homepage/Hero.module.scss
+++ b/src/components/homepage/Hero.module.scss
@@ -6,6 +6,10 @@
   display: flex;
   flex-direction: column;
   background: #000;
+
+  @include small-size {
+    overflow: hidden;
+  }
 }
 
 .heroBanner {
@@ -24,7 +28,6 @@
 
   @include small-size {
     padding: 0;
-    overflow: hidden;
   }
 }
 
